--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,1 +1,9 @@
-Hi this is template
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Djanog works</title>
+    </head>
+    <body>
+        <h1>This actually works!!</h1>
+    </body>
+</html>
