--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,6 +4,6 @@
         <title>Djanog works</title>
     </head>
     <body>
-        <h1>This actually works!!</h1>
+        <h1>This actually rr works!!</h1>
     </body>
 </html>
